# spotify-tauri

./: README.md  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/workflows/: release.yml
src/: README.md  commands.ts  common.ts  index.ts  optimize.ts  package_info.ts  remove_elements.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/js/: common.js  optimize.js  remove_elements.js
src-tauri/src/: main.rs
